# lykd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: .gitignore  alembic.ini  app.py  migrate_data.py  run_dev.py  run_server.py  settings.py  utils.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2025_08_03_71e6c5debeb0_add_user_table.py  2025_08_05_319b86f813a9_add_music_tables.py  2025_08_09_27810886f3cc_initial_again.py  2025_08_11_b852c4338504_adding_new_model_fields.py  2025_08_14_78caabe80357_adding_artist_uri.py  2025_08_14_e4635b15000d_adding_user_username.py  2025_08_16_dc4e98e5718a_adding_last_scan_times.py  2025_08_17_0c9d57cb5fbe_friendship.py  2025_08_18_3fff3f6745bc_adding_indexes.py  2025_08_19_ad2786ea98a0_user_ignored_tables.py  2025_08_19_b1a2c3d4e5f6_add_idx_plays_user_track.py  2025_08_19_ffad0adbd29a_global_ignored.py  2025_08_20_d31adb07ac16_add_oauth_states.py  2025_08_21_58bec5fc7a82_storing_user_subscribed.py  2025_08_22_bae845b7158a_adding_playlist_snapshot.py  2025_08_23_4ec607b432b8_supporting_different_apps.py  2025_09_04_a703d0e6ec71_migrate_to_uid_likes_and_ignore.py
backend/models/: __init__.py  auth.py  common.py  friendship.py  ignored.py  music.py  types.py
backend/routes/: auth_route.py  deps.py  friendship.py  friendship_route.py  ignore_route.py  public_route.py  recent_route.py  spotify_route.py  spotify_streaming.py
backend/scripts/: fetch_data.py  fetch_liked_songs.py  migrate_data.py
backend/services/: __init__.py  cache.py  email.py  friendship.py  likes.py  slack.py  spotify.py  spotify_history.py  spotify_retry.py  store.py
backend/tests/: conftest.py
backend/tests/integration/: test_friendship_routes.py  test_ignore_route.py  test_integration.py  (+3 more)
backend/utils/: __init__.py  cache.py  chunks.py  dates.py  logs.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: .htaccess
frontend/src/: App.css  App.test.tsx  App.tsx  AuthContext.tsx  Dashboard.css  Dashboard.tsx  ErrorBoundary.tsx  ErrorPage.css  ErrorPage.tsx  Footer.tsx  FriendsPage.tsx  FriendshipUI.test.tsx  Homepage.css  Homepage.tsx  IgnoreButtons.css  IgnoreButtons.tsx  IgnoredPage.css  IgnoredPage.tsx  Layout.css  Layout.tsx  LikesPage.tsx  MiniPlayer.css  MiniPlayer.tsx  NotFoundPage.tsx  PublicProfile.css  PublicProfilePage.test.tsx  PublicProfilePage.tsx  Recent.css  RecentActivity.tsx  RecentFriendsWidget.tsx  RecentMyWidget.tsx  RecentPlaysPage.tsx  ServicesPage.css  ServicesPage.tsx  SettingsPage.css  SettingsPage.tsx  SpotifyImport.css  SpotifyImportPage.tsx  UserDropdown.tsx  api.ts  (+7 more)
scripts/: sanitize_locks.py
(+9 files in other folders)
