[project]
name = "lykd"
version = "0.1.0"
description = "Your likes made social"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "brotli-asgi>=1.4.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.0.0",
]

[[tool.uv.index]]
url = "https://gsrio.jfrog.io/artifactory/api/pypi/gsr-pypi/simple"
default = true
