[project]
name = "lykd"
version = "1.0.0"
description = "Your likes made social"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "brotli-asgi>=1.4.0",
    "tenacity>=9.1.2",
    "slack-sdk>=3.36.0",
    "cachetools>=6.1.0",
    "bandit>=1.8.6",
    "python-multipart>=0.0.20",
    "expiringdict>=1.2.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = [
#    "--doctest-modules"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/alembic/*",
    "*/scripts/*",
    "backend/run_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["*/tests/*", "/influx_client.py", ".venv"]
skips = ["B110"]
